<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Todo app</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="reach_bottom_data">No more todo</string>

    <!--Drawer items-->
    <string name="today">Today</string>
    <string name="next_seven_days">Next 7 Days</string>
    <string name="priority">Priority</string>
    <string name="set_priority">Set priority</string>
    <string name="theme">Theme</string>
    <string name="share">Share</string>
    <string name="complete">Complete</string>
    <string name="title_activity_add_todo">Task</string>
    <string name="action_settings">Settings</string>
    <string name="task_hint">e.g. Go to interview at Mad</string>
    <string name="due_date">Due date</string>
    <string name="date">Date</string>
    <string name="date_value">Date: </string>
    <string name="cannot_create_task">Creating task fail.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="action_delete">Delete</string>
    <string name="action_mark_as_complete">Mark as complete</string>
    <string name="none">None</string>
    <string name="no_task_available">No task available</string>
    <string name="comming_soon">Comming soon</string>
    <string name="overdue">Overdue</string>

</resources>
