<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_today"
              android:icon="@drawable/ic_today"
              android:title="@string/today"/>

        <item android:id="@+id/nav_next_seven_days"
              android:icon="@drawable/ic_assignment"
              android:title="@string/next_seven_days"/>

        <item android:id="@+id/nav_priority"
              android:icon="@drawable/ic_priority_black_24dp"
              android:title="@string/priority"/>

        <item android:id="@+id/nav_complete"
              android:icon="@drawable/ic_done"
              android:title="@string/complete"/>

        <item android:id="@+id/nav_overdue"
              android:icon="@drawable/ic_overdue"
              android:title="@string/overdue"/>

    </group>

    <group android:id="@+id/menu_bottom"
           android:checkableBehavior="none">

        <item android:id="@+id/nav_theme"
              android:icon="@drawable/ic_settings"
              android:title="@string/theme"/>

        <item android:id="@+id/nav_share"
              android:icon="@drawable/ic_menu_share"
              android:title="@string/share"/>
    </group>

</menu>
