<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_height="wrap_content">

    <TextView
            android:layout_margin="@dimen/margin_5x"
            android:id="@+id/date"
            android:text="@string/date_value"
            android:textSize="@dimen/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="@dimen/margin_5x"
            android:layout_marginBottom="@dimen/margin_3x"
            android:layout_marginEnd="@dimen/margin_5x"
            android:layout_toEndOf="@+id/date"
            android:textSize="@dimen/text_medium"
            android:text="@string/date"
            android:id="@+id/tv_date"
            android:textColor="@color/colorTextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap"/>

    <TextView
            android:layout_marginStart="@dimen/margin_5x"
            android:layout_marginEnd="@dimen/margin_5x"
            android:layout_marginBottom="@dimen/margin_5x"
            android:id="@+id/tv_task"
            android:layout_below="@+id/tv_date"
            android:textSize="@dimen/text_large"
            android:text="@string/task_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>